--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,10 @@
 
   height: 500px;
 }
-
+.hover_card :hover{
+  transform: translateY(10px);
+  transition: .3s;
+}
 .banner_servicies_container {
   background-image: url(../assets/images/images/design_studio_2.jpg);
   background-size: cover;
