Update proyecto final

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,5 @@
 @import 'layouts/services';
 @import 'layouts/service_name';
 @import 'layouts/contact';
+@import 'base/fonts';
+@import 'base/vars';
