--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Kanit:wght@300;500;600&family=Mate:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Kanit:wght@300;500;600&family=Mate:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 .footer {
   background-color: rgb(35, 35, 35);
   margin-top: 80px;
@@ -9,7 +11,6 @@
 }
 .footer a {
   text-decoration: none;
-  color: #de1491;
 }
 
 .navbar {
@@ -61,8 +62,59 @@
 }
 
 .contact_info {
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-top: 100px;
+}
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.8rem;
+  font-weight: 600;
+}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+h4 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+}
+
+h5 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+}
+
+h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
+
+h1 {
+  color: #195b65;
+}
+
+a {
+  color: #33a0b0;
+}
+
+a:hover {
+  color: #72d7e7;
 }
 
 /*# sourceMappingURL=style.css.map */
