--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -1,4 +1,7 @@
 .contact_info {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    margin-top: 100px;
+    
+   
   }
